# Einstein-Field-Equations

./: .dockerignore  .env.example  .env.test  .gitignore  COMPONENT_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  Dockerfile  Features List.md  INSTALLER_README.md  MONITORING_SETUP.md  PERFORMANCE_OPTIMIZATION.md  Project Structure.md  README.md  RUNNING_AND_TESTING.md  SUPABASE_DEPLOYMENT_GUIDE.md  SUPABASE_MIGRATION.md  SUPABASE_README.md  Tech Stack.md  build_installer.bat  build_windows_installer.py  clean_downloads.bat  diagnose_frontend.bat  docker-compose.prod.yml  docker-compose.yml  playwright.config.ts  pyproject.toml  requirements.txt  setup_supabase.js
.github/workflows/: supabase-ci-cd.yml
app/: __init__.py  main.py
backend/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py  users.py
backend/app/config/: database.py
backend/app/core/: cache.py  security.py
backend/app/models/: user.py
backend/app/physics/: tensors.py
backend/app/services/: calculation_service.py
backend/tests/: conftest.py  test_api.py  test_metrics.py  test_tensors.py
build_installer/: Einstein_Field_Equations.bat  installer.iss
build_installer/backend/: start_backend.bat
build_installer/database/: init_database.sql  setup_database.bat
build_installer/frontend/: package-lock.json  package.json  (+2 more)
config/: README.md
docs/: README.md
frontend/: .env.example  package.json
nginx/: nginx.conf
prometheus/: prometheus.yml
scripts/: README.md  cleanup.ps1  enhance-structure.ps1  fix-structure.ps1  generate-version.sh  reorganize.ps1  reorganize.sh  run-tests.ps1
src/: README.md
supabase/: config.toml
tests/: DETAILED_GUIDE.md  METRIC_TESTING.md  QUICK_REFERENCE.md  README.md  conftest.py  run-all-tests.ps1  test_api.py
(+93 files in other folders)
